force-app/main/default/objects/Airport__c/fields/AIR_NUM_Latitude__c.field-meta.xml
<CustomField>
    <fullName>AIR_NUM_Latitude__c</fullName>
    <description>Airport latitude location (in degrees)</description>
    <label>Latitude</label>
    <precision>18</precision>
    <required>true</required>
    <scale>16</scale>
    <type>Number</type>
</CustomField>