force-app/main/default/objects/Airport__c/fields/AIR_NUM_Longitude__c.field-meta.xml
<CustomField>
    <fullName>AIR_NUM_Longitude__c</fullName>
    <description>Airport longitude location (in degrees)</description>
    <label>Longitude</label>
    <precision>18</precision>
    <required>true</required>
    <scale>15</scale>
    <type>Number</type>
</CustomField>