force-app/main/default/objects/Airport__c/fields/AIR_TXT_IATACode__c.field-meta.xml
<CustomField>
    <fullName>AIR_TXT_IATACode__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>IATA 3 letter identifier for the airport</inlineHelpText>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>