force-app/main/default/objects/Airport__c/listViews/All_airports.listView-meta.xml
<ListView>
    <fullName>All_airports</fullName>
    <columns>NAME</columns>
    <columns>AIR_TXT_IATACode__c</columns>
    <columns>AIR_NUM_Latitude__c</columns>
    <columns>AIR_NUM_Longitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All airports</label>
</ListView>